--- a/Swyzzy.xcodeproj/xcshareddata/xcschemes/SwyzzyMock.xcscheme
+++ b/Swyzzy.xcodeproj/xcshareddata/xcschemes/SwyzzyMock.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1300"
+   LastUpgradeVersion = "1320"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E06E67CE2718C81E00CB1995"
-               BuildableName = "Swyzzy with Deauth.app"
-               BlueprintName = "Swyzzy with Deauth"
+               BlueprintIdentifier = "F9BE45CB272F2EB2009BEA32"
+               BuildableName = "SwyzzyMock.app"
+               BlueprintName = "SwyzzyMock"
                ReferencedContainer = "container:Swyzzy.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,19 +44,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E06E67CE2718C81E00CB1995"
-            BuildableName = "Swyzzy with Deauth.app"
-            BlueprintName = "Swyzzy with Deauth"
+            BlueprintIdentifier = "F9BE45CB272F2EB2009BEA32"
+            BuildableName = "SwyzzyMock.app"
+            BlueprintName = "SwyzzyMock"
             ReferencedContainer = "container:Swyzzy.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "auto_deauth"
-            value = "true"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -68,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E06E67CE2718C81E00CB1995"
-            BuildableName = "Swyzzy with Deauth.app"
-            BlueprintName = "Swyzzy with Deauth"
+            BlueprintIdentifier = "F9BE45CB272F2EB2009BEA32"
+            BuildableName = "SwyzzyMock.app"
+            BlueprintName = "SwyzzyMock"
             ReferencedContainer = "container:Swyzzy.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
